--- a/src/main/webapp/items-amend.html
+++ b/src/main/webapp/items-amend.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>WeTao / ItemsManagement</title>
+    <title>WeTao / ItemsAmend</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -174,14 +174,14 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>添加商品</h4></a>
+                            <li><a href=""><h4>商品详情</h4></a>
                             </li>
                         </ol>
                     </div>
                     <!-- end .wrap-breadcrumb-->
                     <div class="section-title-page section-title-page_mod-a">
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">Items &nbsp; management</h1>
+                        <h1 class="ui-title-page">I t e m s D e t a i l s</h1>
                     </div>
                 </div>
             </div>
@@ -205,11 +205,11 @@
                             <div class="col2-set" id="customer_details">
                                 <div class="col-1">
                                     <div class="woocommerce-billing-fields">
-                                        <!--注册表单/////////////////////////////////////////////////////////////-->
+                                        <!--动态写入商铺详情/////////////////////////////////////////////////////////////-->
                                         <h3>请输入商品信息</h3>
                                         <p class="form-row form-row form-row-first ">
                                             <label>商品名称(Name)</label>
-                                            <!--商品名称，i_name/////////////////////////////////////////////////////////////-->
+                                            <!--动态写入商品名称，i_name/////////////////////////////////////////////////////////////-->
                                             <input type="text" class="input-text " name="iName" placeholder="Name">
                                         </p>
                                         <p class="form-row form-row form-row-last ">
@@ -221,8 +221,8 @@
 
                                         <div class="b-filter__group">
                                             <p class="form-row form-row form-row-first">
-                                                <!--商家选择将商品放在那个商店，u_password/////////////////////////////////////////////////////////////-->
-                                                <label>店铺名(Store)</abbr></label>
+                                                <!--动态获取所属店铺名，u_password/////////////////////////////////////////////////////////////-->
+                                                <label>店铺名(Store)</label>
                                             </p>
                                             <select class="selectpicker" data-width="100%" name="storeId">
                                                 <!--动态获取商店名称，storeId/////////////////////////////////////////////////////////////-->
@@ -273,13 +273,14 @@
                                         <p class="form-row form-row">
                                         	<lable>添加关于商品的图片(picture)</lable>
                                             <input type="file" name="file" class="webuploader-element-invisible" multiple accept="image/*">
+                                            <lable>展示该商品已有的图片，并可以进行修改</lable>
                                             
                                         </p>
                                     </div>
                                     <br>
                                     <br>
                                     <div class="woocommerce-shipping-fields">
-                                            <!--商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
+                                            <!--动态获取商品介绍，i_introduction/////////////////////////////////////////////////////////////-->
                                         <h4>添加一段关于商品的介绍吧</h4>
                                         <p class="form-row form-row">
                                             <label for="order_comments" class="">(Items Introduction)</label>
