用户前端优化

--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -153,7 +153,7 @@
                                     <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
                                     </li>
                                     <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                                    <li><a href="#">个人信息</a>
+                                    <li>个人信息</a>
                                     </li>
                                     <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                                  aria-hidden="true"></i></a><span
@@ -191,7 +191,7 @@
                         </div>
                         <div class="img-group">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-md-2">
                                     <div class="img-group__item tilter tilter--1" id="img">
                                        <!-- <figure class="tilter__figure">
                                             &lt;!&ndash;用户头像模块/////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
@@ -355,7 +355,7 @@
         $().ready(function(){
             var id=getId();
             display1(id);
-            display2();
+            display2(id);
         });
     </script>
 </body>
