--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -167,7 +167,7 @@
                         <li><a href="display.html">个人信息</a>
                         </li>
                         <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li class="active"><a href="login.html">quit</a>
+                        <li class="active"><a href="login.html">退出</a>
                         </li>
                     </ul>
                     <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
