--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -391,7 +391,7 @@
                         "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                         items['iPhotos'] +
                         ">" +
-                        "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                        "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                         items['iPhotos'] +
                         ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                         items['iName'] +
@@ -444,7 +444,7 @@
                     "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                     items['iPhotos'] +
                     ">" +
-                    "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                    "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                     items['iPhotos'] +
                     ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                     items['iName'] +
@@ -495,7 +495,7 @@
                         "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                         items['iPhotos'] +
                         ">" +
-                        "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                        "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                         items['iPhotos'] +
                         ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                         items['iName'] +
