--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -855,7 +855,7 @@
                             "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" +
-                            "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                            "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                             items['iName'] +
@@ -928,7 +928,7 @@
                             "<a class='b-goods__media js-zoom-images' id='img' href=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" +
-                            "<img class='img-responsive' alt='img'  src=" + 'images/' +
+                            "<img class='img-responsive' alt='img'  src=" + 'static/images/' +
                             items['iPhotos'] +
                             ">" + "</a>" + "<span class='b-goods__main'><span class='b-goods__inner'><span  class='b-goods__categorie'>" +
                             items['iName'] +
