--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -182,9 +182,9 @@
                             </li>
                         </ol>
                     </div>
-                    <div class="section-title-page section-title-page_mod-a">
+                    <div >
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">A l l  S t o r e</h1>
+                        <h6 class="ui-title-page">S t o r e D e t a i l s</h6>
                     </div>
                 </div>
             </div>
@@ -202,23 +202,22 @@
              			</div>
              			<!-- 修改店名、查询、添加商品 -->
              			<form>
-             				<div class="row">
+             				<div class="row" style="width:1500px">
                             	<p style="font-size:18px">商品列表</p>
-                            	<div class="col-md-6">
-                            		<input class="form-control" type="text" placeholder="Your Select" >
+                            	<div class="col-md-3" >
+                            		<input class="form-control" type="text" placeholder="输入id或者商品名查询" id="search">
                             		<!-- <input type="text" class="input-text "> -->
                             	</div>
-                            	<div class="col-md-6">
-									<select class="selectpicker" style="height:40px">
-										<option value="stId">商品ID</option>
-										<option value="stName">商品名</option>
-										<option value="stName">商品简介</option>
+                            	<div class="col-md-6" >
+									<select class="selectpicker" style="height:40px" id="iStatus">
+										<option value="0">正常</option>
+										<option value="1">异常</option>
 									</select>
 									&nbsp;&nbsp;
-									<input type="button" value="查询" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									<input type="button" value="添加商品" class="ui-form__btn btn btn-dark" onclick="window.location='items_manage.html'" style="min-width:80px;font-size:14px;line-height:40px"/>
+									<input type="button"  value="查询" onclick="chaxun()" class="ui-form__btn btn btn-dark" style="min-width:80px;font-size:14px;line-height:40px"/>
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									<input type="button" value="添加商品" class="ui-form__btn btn btn-dark" onclick="window.location='items_manage.html'" style="min-width:80px;font-size:14px;line-height:40px;"/>
                             	</div>
                             </div>
              			</form>  
@@ -227,37 +226,41 @@
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">                          	
                             	<p>&nbsp;&nbsp;&nbsp;&nbsp;</p>                                
-                                <div class="table-container">
-                                	<table class="table table_primary">
-                                    	<thead>
+                                <div class="table-container" style="width:1500px">
+                                	<table class="table table_primary" style="width:80%">
+                                    	<thead >
                                         	<tr>
-                                                <th style="width:150px">商品ID</th>
+                                                <th style="width:130px">商品ID</th>
                                                 <th style="width:200px">商品名</th>
                                                 <th style="width:200px">商品图片</th>
                                                 <th style="width:300px">商品简介</th>
-                                                <th style="width:100px">库存</th>
-                                                <th style="width:130px">销售量</th>
+                                                <th style="width:130px">库存</th>
+                                                <th style="width:150px">销售量</th>
                                                 <th style="width:150px">商品单价</th>
                                                 <th style="width:130px">状态</th>
                                                 <th style="width:200px">操作</th>
                                              </tr>
                                          </thead>
-                                       	 <tbody>
-                                        	<tr>
-                                                <td>7000000</td>
+                                       	 <tbody id="selectAll">
+                                               <!-- <td>7000000</td>
                                                 <td>程序员专用假发</td>
                                                 <td><a class="b-goods__media js-zoom-images"
                                                href="static/wt/images/2_1.jpg"><img alt="img" src="static/wt/images/2_1.jpg" class="img-responsive"></a></td>
-                                                <td>专业假发，程序员们的贴心小棉袄；头套牢固，戴上后“山竹”都吹不掉；款式多样：寸头、女装长发、爆炸头等等。</td>
+                                                <td>专业假发，程序员们的贴心小棉袄；头套牢固，等等。</td>
                                                 <td>100</td>
                                                 <td>90</td>
                                                 <td>800</td>
                                                 <td>正常</td>
-                                                <!-- 修改是进入商品修改页面 -->
-                                                <td><a href="items-amend.html">修改 </a>/<a href="#"> 删 除 </a></td>
-                                           	</tr>                                             
+                                                &lt;!&ndash; 修改是进入商品修改页面 &ndash;&gt;
+                                                <td><a href="items-amend.html">修改 </a>/<a href="#"> 删 除 </a></td>-->
+
                                        	 </tbody>
-                               		</table>	
+                               		</table>
+
+                                    <div id="fenye" style="float: right;margin-right: 295px"></div><!--
+                                    <ul class="pagination text-right" >
+
+                                    </ul>-->
                              	</div>
                              	
                             </div>
@@ -388,9 +391,15 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
-
+<script src="static/jq/manageItems.js"></script>
+<script src="static/jq/showitems.js"></script>
 </body>
 
 </html>
+<script type="text/javascript">
+    $(function () {
+        selectAll(1);
+    })
+</script>
 
 
